# hfcma

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: coco_vitl14.yaml  flickr30k_vitl14.yaml
docs/: DATA.md  GITHUB_RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  RESULTS.md
scripts/: eval_coco.sh  eval_flickr30k.sh  train_coco.sh  train_flickr30k.sh
src/hfcma/: __init__.py  evaluate.py  losses.py  rerank.py  train.py
src/hfcma/datasets/: __init__.py  retrieval_json.py
src/hfcma/evaluation/: __init__.py  metrics.py
src/hfcma/models/: __init__.py  clip_feature_extractor.py  hfcma.py
tests/: test_metrics.py  test_sinkhorn.py
tools/: convert_retrieval_json.py
