[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfcma"
version = "0.1.0"
description = "Hierarchical Fine-grained Cross-modal Alignment for image-text retrieval"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

